basic backup support
use argparse in pycardsyncer
read password from command line