@@ -1,0 +1,1 @@
+include pycard.conf.sample
